Align legacy version label

--- a/legacy.html
+++ b/legacy.html
@@ -164,7 +164,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>INFOTAINMENT LEGACY</h1>
+            <h1>INFOTAINMENT LEGACY <span>4.3</span></h1>
             <div class="header-actions">
                 <button class="button alt" id="noise-toggle">Noise Off</button>
                 <button class="button alt" id="noise-type-toggle">White</button>
